update SampleForm
